# meme-cli

./: README.md  hello.py  pyproject.toml
crypto/: bitget.py  grid_strategy.py
meme_cli/: bitget.py  info.py  sync.py
tests/: test.ipynb
utils/: pd.py
