[project]
    dependencies = [
        "arrow>=1.3.0",
        "babel>=2.16.0",
        "cowsay>=6.1",
        "mysql-connector-python>=9.0.0",
        "pandas>=2.2.3",
        "python-dotenv>=1.0.1",
        "pytz>=2024.2",
        "requests>=2.32.3",
        "sqlalchemy>=2.0.35",
        "typer>=0.12.5",
    ]
    description = "pytho cli tools"
    keywords = ["cli", "typer"]
    license = { text = "MIT License" }
    name = "meme-cli"
    readme = "README.md"
    requires-python = ">=3.10"
    version = "0.1.0"

[tool.uv]
    dev-dependencies = ["ipykernel>=6.29.5"]

[tool.hatch.build]
    packages = ["crypto", "meme_cli", "utils"]

[build-system]
    build-backend = "hatchling.build"
    requires      = ["hatchling"]

[project.scripts]
    bitget  = "meme_cli.bitget:app"
    example = "meme_cli.example:app"
    ms      = "meme_cli.info:ms"
    os      = "meme_cli.info:os"
    pst     = "meme_cli.info:print_strf_time"
    pyv     = "meme_cli.info:py_version"
    say     = "meme_cli.info:say"
    sync    = "meme_cli.sync:app"
    ts      = "meme_cli.info:ts"
    uuid    = "meme_cli.info:gen_uuid"
